# structured-extract

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.ci/: ci.yml
.drip/: state.json
.github/workflows/: drip.yml
examples/: gold.json
queue/001/: diff.patch  msg.txt
queue/002/: diff.patch
queue/003/: diff.patch  msg.txt
queue/004/: diff.patch  msg.txt
queue/005/: diff.patch  msg.txt
queue/006/: diff.patch  msg.txt
queue/007/: diff.patch  msg.txt
queue/008/: diff.patch  msg.txt
queue/009/: diff.patch  msg.txt
queue/010/: diff.patch  msg.txt
queue/011/: diff.patch  msg.txt
queue/012/: diff.patch  msg.txt
queue/013/: diff.patch  msg.txt
queue/014/: diff.patch  msg.txt
queue/015/: diff.patch  msg.txt
queue/016/: diff.patch  msg.txt
queue/017/: diff.patch  msg.txt
queue/018/: diff.patch  msg.txt
queue/019/: diff.patch  msg.txt
queue/020/: diff.patch  msg.txt
queue/021/: diff.patch  msg.txt
scripts/: apply_next.sh
