[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-extract"
version = "0.1.0"
description = "Turn messy PDFs and text documents into trustworthy structured JSON data"
authors = [{ name = "Girisankar G", email = "girisankargopakumar@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
sx = "structured_extract.cli:main"

[project.urls]
Homepage = "https://github.com/im-girisankar/structured-extract"
Repository = "https://github.com/im-girisankar/structured-extract"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
